// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithLabel Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="vertical"
    ellipsis={false}
    label="Total WSP"
  >
    EUR 
    <span
      style={
        Object {
          "textDecoration": "line-through",
        }
      }
    >
      15,982.09
    </span>
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      12,345.67
    </span>
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithLabel__Label
          ellipsis={false}
        >
          Total WSP
        </WithLabel__Label>,
        <WithLabel__Content
          ellipsis={false}
        >
          EUR 
          <span
            style={
              Object {
                "textDecoration": "line-through",
              }
            }
          >
            15,982.09
          </span>
           
          <span
            style={
              Object {
                "color": "red",
              }
            }
          >
            12,345.67
          </span>
        </WithLabel__Content>,
      ],
      "direction": "vertical",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Total WSP",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "Total WSP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "EUR ",
            <span
              style={
                Object {
                  "textDecoration": "line-through",
                }
              }
            >
              15,982.09
            </span>,
            " ",
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              12,345.67
            </span>,
          ],
          "ellipsis": false,
        },
        "ref": null,
        "rendered": Array [
          "EUR ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "15,982.09",
              "style": Object {
                "textDecoration": "line-through",
              },
            },
            "ref": null,
            "rendered": "15,982.09",
            "type": "span",
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "12,345.67",
              "style": Object {
                "color": "red",
              },
            },
            "ref": null,
            "rendered": "12,345.67",
            "type": "span",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithLabel__Label
            ellipsis={false}
          >
            Total WSP
          </WithLabel__Label>,
          <WithLabel__Content
            ellipsis={false}
          >
            EUR 
            <span
              style={
                Object {
                  "textDecoration": "line-through",
                }
              }
            >
              15,982.09
            </span>
             
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              12,345.67
            </span>
          </WithLabel__Content>,
        ],
        "direction": "vertical",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Total WSP",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "Total WSP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "EUR ",
              <span
                style={
                  Object {
                    "textDecoration": "line-through",
                  }
                }
              >
                15,982.09
              </span>,
              " ",
              <span
                style={
                  Object {
                    "color": "red",
                  }
                }
              >
                12,345.67
              </span>,
            ],
            "ellipsis": false,
          },
          "ref": null,
          "rendered": Array [
            "EUR ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "15,982.09",
                "style": Object {
                  "textDecoration": "line-through",
                },
              },
              "ref": null,
              "rendered": "15,982.09",
              "type": "span",
            },
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "12,345.67",
                "style": Object {
                  "color": "red",
                },
              },
              "ref": null,
              "rendered": "12,345.67",
              "type": "span",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`WithLabel Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="vertical"
    ellipsis={false}
    label="Pieces"
  >
    0
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithLabel__Label
          ellipsis={false}
        >
          Pieces
        </WithLabel__Label>,
        <WithLabel__Content
          ellipsis={false}
        >
          0
        </WithLabel__Content>,
      ],
      "direction": "vertical",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Pieces",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "Pieces",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "0",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "0",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithLabel__Label
            ellipsis={false}
          >
            Pieces
          </WithLabel__Label>,
          <WithLabel__Content
            ellipsis={false}
          >
            0
          </WithLabel__Content>,
        ],
        "direction": "vertical",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Pieces",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "Pieces",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "0",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "0",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`WithLabel Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="horizontal"
    ellipsis={false}
    label="RRP"
    style={
      Object {
        "width": "300px",
      }
    }
  >
    EUR 69.99
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithLabel__Label
          ellipsis={false}
        >
          RRP
        </WithLabel__Label>,
        <WithLabel__Content
          ellipsis={false}
        >
          EUR 69.99
        </WithLabel__Content>,
      ],
      "direction": "horizontal",
      "style": Object {
        "width": "300px",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "RRP",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "RRP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "EUR 69.99",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "EUR 69.99",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithLabel__Label
            ellipsis={false}
          >
            RRP
          </WithLabel__Label>,
          <WithLabel__Content
            ellipsis={false}
          >
            EUR 69.99
          </WithLabel__Content>,
        ],
        "direction": "horizontal",
        "style": Object {
          "width": "300px",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "RRP",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "RRP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "EUR 69.99",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "EUR 69.99",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
